--- a/gradle-examples/gradle-example-minimal/build.gradle
+++ b/gradle-examples/gradle-example-minimal/build.gradle
@@ -20,7 +20,7 @@ plugins {
 allprojects {
     repositories {
         maven {
-            url "http://127.0.0.1:8081/artifactory/libs-release"
+            url "http://arti.com/artifactory/gradle-gradle-release"
         }
     }
 }
@@ -44,12 +44,12 @@ publishing {
 }
 
 artifactory {
-    contextUrl = 'http://127.0.0.1:8081/artifactory'
+    contextUrl = 'http://arti.com/artifactory'
     publish {
         repository {
-            repoKey = 'libs-snapshot-local' // The Artifactory repository key to publish to
-            username = "${artifactory_user}" // The publisher user name
-            password = "${artifactory_password}" // The publisher password
+            repoKey = 'gradle-gradle-release' // The Artifactory repository key to publish to
+            username = "admin" // The publisher user name
+            password = "Password1!" // The publisher password
         }
         defaults {
             // Reference to Gradle publications defined in the build script.
