--- a/gradle-examples/gradle-example-minimal/build.gradle
+++ b/gradle-examples/gradle-example-minimal/build.gradle
@@ -31,6 +31,10 @@ apply plugin: 'com.jfrog.artifactory'
 apply plugin: 'java'
 apply plugin: 'maven-publish'
 
+configurations {
+    smokeTest.extendsFrom testImplementation
+}
+
 dependencies {
     testImplementation 'junit:junit:4.7'
     smokeTest 'org.apache.httpcomponents:httpclient:4.5.5'
