--- a/gradle-examples/gradle-example-minimal/build.gradle
+++ b/gradle-examples/gradle-example-minimal/build.gradle
@@ -15,7 +15,7 @@
  */
 plugins {
     id("com.jfrog.artifactory") version "5.+"
-    id 'org.springframework.boot' version '3.1.4'
+    id 'org.springframework.boot' version '3.+'
 }
 
 
