--- a/gradle-examples/gradle-example-minimal/build.gradle
+++ b/gradle-examples/gradle-example-minimal/build.gradle
@@ -40,6 +40,8 @@ configurations {
 
 dependencies {
     testImplementation 'junit:junit:4.7'
+    classpath 'com.android.tools.build:gradle:3.6.3'
+    classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.15.2'
 }
 
 publishing {
