--- a/gradle-examples/gradle-example-minimal/build.gradle
+++ b/gradle-examples/gradle-example-minimal/build.gradle
@@ -40,6 +40,20 @@ configurations {
 
 dependencies {
     testImplementation 'junit:junit:4.7'
+    runtimeOnly group: 'org.springframework', name: 'spring-core', version: '2.5'
+    runtimeOnly 'org.springframework:spring-core:2.5',
+            'org.springframework:spring-aop:2.5'
+    runtimeOnly(
+        [group: 'org.springframework', name: 'spring-core', version: '2.5'],
+        [group: 'org.springframework', name: 'spring-aop', version: '2.5']
+    )
+    runtimeOnly('org.hibernate:hibernate:3.0.5') {
+        transitive = true
+    }
+    runtimeOnly group: 'org.hibernate', name: 'hibernate', version: '3.0.5', transitive: true
+    runtimeOnly(group: 'org.hibernate', name: 'hibernate', version: '3.0.5') {
+        transitive = true
+    }
 }
 
 publishing {
