--- a/gradle-examples/gradle-example-publish/build.gradle
+++ b/gradle-examples/gradle-example-publish/build.gradle
@@ -30,6 +30,7 @@ allprojects {
     repositories {
         maven {
             url "http://arti.com/artifactory/gradle-gradle-release"
+            allowInsecureProtocol = true
         }
     }
 }
