--- a/gradle-examples/gradle-example-ci-server/build.gradle
+++ b/gradle-examples/gradle-example-ci-server/build.gradle
@@ -23,8 +23,11 @@ allprojects {
   status = 'integration'
 
   repositories {
-    mavenCentral()
-    allowInsecureProtocol = true
+    // mavenCentral()
+           maven {
+            url "https://repo1.maven.org/maven2/"
+            allowInsecureProtocol = true
+        }
   }
 }
 
