--- a/gradle-examples/gradle-example-minimal/build.gradle
+++ b/gradle-examples/gradle-example-minimal/build.gradle
@@ -32,7 +32,7 @@ version = currentVersion
 
 apply plugin: 'com.jfrog.artifactory'
 apply plugin: 'java'
-apply plugin: 'maven-publish'
+//apply plugin: 'maven-publish'
 
 configurations {
     smokeTest.extendsFrom testImplementation
