--- a/gradle-examples/gradle-example-minimal/build.gradle
+++ b/gradle-examples/gradle-example-minimal/build.gradle
@@ -13,9 +13,9 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-plugins {
-    id("com.jfrog.artifactory") version "5.+"
-}
+// plugins {
+//     id("com.jfrog.artifactory") version "5.+"
+// }
 
 
 allprojects {
