--- a/gradle-examples/gradle-example-minimal/build.gradle
+++ b/gradle-examples/gradle-example-minimal/build.gradle
@@ -30,7 +30,7 @@ allprojects {
 
 version = currentVersion
 
-apply plugin: 'com.jfrog.artifactory'
+// apply plugin: 'com.jfrog.artifactory'
 apply plugin: 'java'
 apply plugin: 'maven-publish'
 
