--- a/gradle-examples/gradle-example-minimal/build.gradle
+++ b/gradle-examples/gradle-example-minimal/build.gradle
@@ -77,7 +77,7 @@ artifactory {
             // This is how we tell the Artifactory Plugin which artifacts should be
             // published to Artifactory.
             publications('mavenJava')
-            publishArtifacts = true
+            //publishArtifacts = true
             // Properties to be attached to the published artifacts.
             properties = ['qa.level': 'basic', 'dev.team' : 'core']
             // Publish generated POM files to Artifactory (true by default)
