--- a/gradle-examples/gradle-example-ci-server/api/build.gradle
+++ b/gradle-examples/gradle-example-ci-server/api/build.gradle
@@ -7,7 +7,9 @@ dependencies {
     implementation module("commons-lang:commons-lang:2.4") {
         dependency("commons-io:commons-io:1.2")
     }
-    implementation group: 'org.apache.wicket', name: 'wicket', version: '1.3.7'
+    //implementation group: 'org.apache.wicket', name: 'wicket', version: '1.3.7'
+    implementation 'org.apache.wicket:wicket:1.3.7'
+
 
 }
 
