--- a/gradle-examples/gradle-example-ci-server/settings.gradle
+++ b/gradle-examples/gradle-example-ci-server/settings.gradle
@@ -1,3 +1,3 @@
-include "shared", "api", "services:webservice"
+include "shared", "api", ":webservice"
 
-rootProject.name = "gradle-example-ci-server"
+rootProject.name = "services"
