--- a/gradle-examples/gradle-android-example/build.gradle
+++ b/gradle-examples/gradle-android-example/build.gradle
@@ -67,18 +67,18 @@ artifactory {
     clientConfig.setIncludeEnvVars(true)
     clientConfig.info.addEnvironmentProperty('test.adding.dynVar',new Date().toString())
 
-    contextUrl = 'http://arti.com/artifactory'
+    contextUrl = 'https://elinaf.jfrog.io/artifactory'
     publish {
         repository {
-            repoKey = 'gradle-gradle-dev-local' // The Artifactory repository key to publish to
+            repoKey = 'yoavh-gradle-dev-local' // The Artifactory repository key to publish to
             username = "admin" // The publisher user name
             password = "Password1!" // The publisher password
             // This is an optional section for configuring Ivy publication (when publishIvy = true).
-            ivy {
-                ivyLayout = '[organization]/[module]/ivy-[revision].xml'
-                artifactLayout = '[organization]/[module]/[revision]/[module]-[revision](-[classifier]).[ext]'
-                mavenCompatible = true //Convert any dots in an [organization] layout value to path separators, similar to Maven's groupId-to-path conversion. True if not specified
-            }
+            // ivy {
+            //     ivyLayout = '[organization]/[module]/ivy-[revision].xml'
+            //     artifactLayout = '[organization]/[module]/[revision]/[module]-[revision](-[classifier]).[ext]'
+            //     mavenCompatible = true //Convert any dots in an [organization] layout value to path separators, similar to Maven's groupId-to-path conversion. True if not specified
+            // }
         }
         defaults {
             // Reference to Gradle publications defined in the build script.
