--- a/gradle-examples/gradle-android-example/build.gradle
+++ b/gradle-examples/gradle-android-example/build.gradle
@@ -71,7 +71,7 @@ artifactory {
     publish {
         repository {
             repoKey = 'yoavh-gradle-dev-local' // The Artifactory repository key to publish to
-            username = "admin" // The publisher user name
+            username = "yoavh" // The publisher user name
             password = "Password1!" // The publisher password
             // This is an optional section for configuring Ivy publication (when publishIvy = true).
             // ivy {
